# first_project

./: .gitignore  CMakeLists.txt  README.md  a.out  dangerous_commands.txt  ex1.c  ex2.c  exec_times.txt  fork_bomb.sh  main  memory_intensive_program  memory_intensive_program.c  run_tests.sh  test_limits  test_limits.c  test_nofile.c  test_nofile.sh
src/: debug.c  ex1.c  ex2.c  ex3.c  test_all_limits  test_all_limits.c  test_cpu  test_cpu.c
